jss-compiler/tests/semantic_errors/redeclaration_same_scope.jss
function void main() {
    let int x = 10;
    let real x = 20.0;
}
